# solana-wallet-analyzer

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci.yml
src/: error.rs  main.rs
src/analysis/: metrics.rs  mod.rs  ranking.rs
src/ingestion/: client.rs  mod.rs
src/storage/: mod.rs  redis.rs
src/types/: mod.rs
src/visualization/: cli.rs  mod.rs
tests/: test_metrics.rs  test_ranking.rs
