[package]
name = "solana-wallet-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["aliargun"]
description = "A proof-of-concept tool for analyzing Solana wallet trading performance"

[dependencies]
solana-client = "1.17"
solana-sdk = "1.17"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
